--- a/sandbox/legacy/package.json
+++ b/sandbox/legacy/package.json
@@ -7,10 +7,9 @@
     "prepare": "panda codegen",
     "sadbox:dev": "vite",
     "sadbox:build": "tsc && vite build",
-    "deps": "pnpm up '@pandacss/*' --latest",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:eslint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,7 +17,7 @@
   },
   "devDependencies": {
     "@pandacss/dev": "^0.40.0",
-    "@pandacss/eslint-plugin": "workspace:*",
+    "eslint-plugin-panda": "workspace:*",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
