--- a/.github/composite-actions/install/action.yml
+++ b/.github/composite-actions/install/action.yml
@@ -5,7 +5,7 @@ runs:
   steps:
     - uses: pnpm/action-setup@v4.1.0
       with:
-        version: 10
+        version: '10.16.1'
     - name: Setup Node.js
       uses: actions/setup-node@v5
       with:
