--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
+    "@typescript-eslint/rule-tester": "^8.43.0",
     "eslint": "^8.56.0",
     "eslint-doc-generator": "^2.2.2",
     "eslint-plugin-eslint-plugin": "^5.2.1",
