--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,4 @@
 name: Publish
-
 on:
   push:
     paths:
@@ -7,10 +6,67 @@ on:
       - 'plugin/**'
     branches:
       - main
-
 jobs:
+  prettier:
+    name: Prettier
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install
+        uses: ./.github/composite-actions/install
+      - name: Run Prettier
+        run: pnpm run lint:prettier
+  tests:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install
+        uses: ./.github/composite-actions/install
+      - name: Run tests
+        run: pnpm run test:vitest
+  eslint:
+    name: ESLint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install
+        uses: ./.github/composite-actions/install
+      - name: Run ESLint
+        run: pnpm run lint:eslint
+        env:
+          NODE_OPTIONS: "--max-old-space-size=4096"
+  types:
+    name: TypeScript
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install
+        uses: ./.github/composite-actions/install
+      - name: Run TypeScript type check
+        run: pnpm run lint:tsc
+  docs:
+    name: Docs
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install
+        uses: ./.github/composite-actions/install
+      - name: Build docs
+        run: pnpm run generate:docs
   release:
     environment: release
+    depends-on:
+      - prettier
+      - tests
+      - eslint
+      - types
+      - docs
     name: Release
     runs-on: ubuntu-latest
     steps:
@@ -18,13 +74,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
       - name: Install
         uses: ./.github/composite-actions/install
-
       - name: Build packages
         run: pnpm build
-
       - name: Publish packages
         id: changesets
         uses: changesets/action@v1
