chore: correct CI

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
         run: pnpm run generate:docs
   release:
     environment: release
-    depends-on:
+    needs:
       - prettier
       - tests
       - eslint
