--- a/.prettierignore
+++ b/.prettierignore
@@ -1,13 +1,11 @@
-dist
+**/node_modules/**
 node_modules
-coverage
-build
-*.hbs
-*.d.ts
+dist
 styled-system
-pnpm-lock.yaml
-.github
-renovate.json
-docs/rules
-.changeset
-*.ejs
+coverage
+*.log
+.*
+!.github
+!.gitignore
+!.changeset
+!.husky
