--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-doc-generator": "^2.2.2",
     "eslint-plugin-eslint-plugin": "^5.2.1",
     "husky": "^9.0.6",
+    "knip": "^5.63.1",
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.4",
     "vitest": "^1.2.1"
