--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,8 +7,5 @@
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": [
-    "sandbox-*",
-    "fixture"
-  ]
+  "ignore": ["sandbox-*", "fixture"]
 }
