--- a/plugin/package.json
+++ b/plugin/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/rule-tester": "^8.43.0",
+    "tsdown": "^0.15.1",
     "typescript": "^5.7.2"
   }
 }
