chore: add knip

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -12,55 +12,17 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 jobs:
-  prettier:
-    name: Prettier
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Run Prettier
-        run: pnpm run lint:prettier
-  tests:
-    name: Unit Tests
+      - uses: actions/checkout@v4
+      - uses: ./.github/composite-actions/install
+      - run: pnpm run lint:prettier
+      - run: pnpm run lint:knip
+      - run: pnpm run lint:tsc
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Run tests
-        run: pnpm run test:vitest
-  eslint:
-    name: ESLint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Run ESLint
-        run: pnpm run lint:eslint
-        env:
-          NODE_OPTIONS: '--max-old-space-size=4096'
-  types:
-    name: TypeScript
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Run TypeScript type check
-        run: pnpm run lint:tsc
-  docs:
-    name: Docs
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Build docs
-        run: pnpm run generate:docs
+      - uses: actions/checkout@v4
+      - uses: ./.github/composite-actions/install
+      - run: pnpm run test:vitest
