--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,66 +7,25 @@ on:
     branches:
       - main
 jobs:
-  prettier:
-    name: Prettier
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Run Prettier
-        run: pnpm run lint:prettier
-  tests:
-    name: Unit Tests
+      - uses: actions/checkout@v4
+      - uses: ./.github/composite-actions/install
+      - run: pnpm run lint:prettier
+      - run: pnpm run lint:knip
+      - run: pnpm run lint:tsc
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Run tests
-        run: pnpm run test:vitest
-  eslint:
-    name: ESLint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Run ESLint
-        run: pnpm run lint:eslint
-        env:
-          NODE_OPTIONS: '--max-old-space-size=4096'
-  types:
-    name: TypeScript
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Run TypeScript type check
-        run: pnpm run lint:tsc
-  docs:
-    name: Docs
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Install
-        uses: ./.github/composite-actions/install
-      - name: Build docs
-        run: pnpm run generate:docs
+      - uses: actions/checkout@v4
+      - uses: ./.github/composite-actions/install
+      - run: pnpm run test:vitest
   release:
     environment: release
     needs:
-      - prettier
-      - tests
-      - eslint
-      - types
-      - docs
+      - lint
+      - test
     name: Release
     runs-on: ubuntu-latest
     steps:
