--- a/plugin/package.json
+++ b/plugin/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/rule-tester": "^8.43.0",
+    "fixture": "workspace:^",
     "tsdown": "^0.15.1",
     "typescript": "^5.7.2"
   }
