--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/composite-actions/install
+      - uses: ./.github/actions/install
       - run: pnpm run lint:prettier
       - run: pnpm run lint:knip
       - run: pnpm run lint:tsc
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/composite-actions/install
+      - uses: ./.github/actions/install
       - run: pnpm run test:vitest
   release:
     environment: release
@@ -34,7 +34,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install
-        uses: ./.github/composite-actions/install
+        uses: ./.github/actions/install
       - name: Build packages
         run: pnpm build
       - name: Publish packages
