--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Release
 on:
   push:
     paths:
@@ -26,19 +26,14 @@ jobs:
     needs:
       - lint
       - test
-    name: Release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Install
-        uses: ./.github/actions/install
-      - name: Build packages
-        run: pnpm build
-      - name: Publish packages
-        id: changesets
+      - uses: ./.github/actions/install
+      - nun: pnpm build
+      - id: changesets
         uses: changesets/action@v1
         with:
           publish: pnpm release
