--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -6,11 +6,9 @@ runs:
     - uses: pnpm/action-setup@v4.1.0
       with:
         version: '10.16.1'
-    - name: Setup Node.js
-      uses: actions/setup-node@v5
+    - uses: actions/setup-node@v5
       with:
         node-version: 24
         cache: 'pnpm'
-    - name: Install dependencies
-      shell: bash
+    - shell: bash
       run: pnpm install
