--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../tsconfig.build.json",
-  "include": ["src/**/*", "tests", "test-utils.ts"],
   "compilerOptions": {
     "paths": {
       "fixture": ["../fixture/src/index.ts"]
     }
-  }
+  },
+  "extends": "../tsconfig.build.json",
+  "include": ["src/**/*", "tests", "test-utils.ts"]
 }
