--- a/plugin/package.json
+++ b/plugin/package.json
@@ -12,7 +12,6 @@
   "devDependencies": {
     "@typescript-eslint/rule-tester": "^8.43.0",
     "eslint": "^9.35.0",
-    "eslint-config-canonical": "^45.0.0",
     "fixture": "workspace:^",
     "multiline-ts": "^4.0.1",
     "tsdown": "^0.15.1",
@@ -46,7 +45,6 @@
     "type": "git",
     "url": "https://github.com/gajus/eslint-plugin-panda"
   },
-  "version": "0.2.12",
   "scripts": {
     "build": "tsdown",
     "dev": "tsdown --watch",
@@ -54,5 +52,6 @@
     "prepare": "pnpm build"
   },
   "sideEffects": false,
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "version": "0.2.12"
 }
