--- a/renovate.json
+++ b/renovate.json
@@ -2,16 +2,16 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "dependencyDashboard": false,
   "extends": ["config:base", ":semanticCommitTypeAll(chore)", "schedule:earlyMondays"],
-  "rebaseWhen": "conflicted",
-  "timezone": "UTC",
   "packageRules": [
     {
-      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
+      "automerge": true,
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"]
     },
     {
       "groupName": "astro",
       "matchPackagePatterns": ["astro*"]
     }
-  ]
+  ],
+  "rebaseWhen": "conflicted",
+  "timezone": "UTC"
 }
