--- a/fixture/package.json
+++ b/fixture/package.json
@@ -1,10 +1,5 @@
 {
-  "name": "fixture",
-  "version": "0.27.3",
-  "private": true,
   "description": "Test fixtures for Panda CSS",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
   "devDependencies": {
     "@pandacss/config": "^0.40.0",
     "@pandacss/generator": "^0.40.0",
@@ -13,5 +8,10 @@
     "@pandacss/preset-panda": "^0.40.0",
     "@pandacss/shared": "^0.40.0",
     "@pandacss/types": "^0.40.0"
-  }
+  },
+  "main": "src/index.ts",
+  "name": "fixture",
+  "private": true,
+  "types": "src/index.ts",
+  "version": "0.27.3"
 }
