--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/install
-      - run: pnpm run lint:prettier
+      - run: pnpm run lint:eslint
       - run: pnpm run lint:knip
       - run: pnpm run lint:tsc
   test:
