--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "husky": "^9.0.6",
     "knip": "^5.63.1",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.2.4",
     "vitest": "^1.2.1"
   },
   "files": [
@@ -34,11 +33,10 @@
   "scripts": {
     "build": "pnpm -r --parallel build",
     "dev": "pnpm -r --parallel dev",
-    "format": "prettier --write .",
+    "format": "eslint --fix .",
     "generate:docs": "eslint-doc-generator",
     "lint:eslint": "eslint . --ext .ts",
     "lint:knip": "knip",
-    "lint:prettier": "prettier --check .",
     "lint:tsc": "pnpm -r --parallel lint:tsc",
     "prepare": "husky",
     "release": "changeset publish",
