--- a/sandbox/tsconfig.json
+++ b/sandbox/tsconfig.json
@@ -3,7 +3,11 @@
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "moduleResolution": "bundler",
     "noEmit": true,
@@ -16,5 +20,9 @@
     "target": "ES2020",
     "useDefineForClassFields": true
   },
-  "include": ["src", "vite.config.ts", "panda.config.ts"]
+  "include": [
+    "src",
+    "vite.config.ts",
+    "panda.config.ts"
+  ]
 }
