--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,18 @@
   "compilerOptions": {
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "customConditions": ["source"],
+    "customConditions": [
+      "source"
+    ],
     "declaration": true,
     "downlevelIteration": true,
     "esModuleInterop": true,
     "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "noEmit": true,
