--- a/plugin/package.json
+++ b/plugin/package.json
@@ -10,9 +10,12 @@
   },
   "description": "ESLint plugin for Panda CSS",
   "devDependencies": {
+    "@pandacss/dev": "^1.3.0",
+    "@pandacss/preset-base": "^1.3.0",
+    "@pandacss/preset-panda": "^1.3.0",
+    "@pandacss/types": "^1.3.0",
     "@typescript-eslint/rule-tester": "^8.43.0",
     "eslint": "^9.35.0",
-    "fixture": "workspace:^",
     "multiline-ts": "^4.0.1",
     "tsdown": "^0.15.1",
     "typescript": "^5.7.2"
