refactor: use deasync

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,8 @@
 onlyBuiltDependencies:
+  - deasync
   - esbuild
   - multiline-ts
   - oxc-resolver
 packages:
-  - 'sandbox'
-  - 'plugin'
+  - sandbox
+  - plugin
