--- a/plugin/package.json
+++ b/plugin/package.json
@@ -6,7 +6,7 @@
     "@pandacss/shared": "^0.53.2",
     "@typescript-eslint/scope-manager": "^8.43.0",
     "@typescript-eslint/utils": "^8.21.0",
-    "synckit": "^0.9.0"
+    "deasync": "^0.1.30"
   },
   "description": "ESLint plugin for Panda CSS",
   "devDependencies": {
@@ -14,6 +14,7 @@
     "@pandacss/preset-base": "^1.3.0",
     "@pandacss/preset-panda": "^1.3.0",
     "@pandacss/types": "^1.3.0",
+    "@types/deasync": "^0.1.5",
     "@typescript-eslint/rule-tester": "^8.43.0",
     "eslint": "^9.35.0",
     "multiline-ts": "^4.0.1",
