--- a/plugin/package.json
+++ b/plugin/package.json
@@ -2,10 +2,10 @@
   "dependencies": {
     "@pandacss/config": "^0.53.2",
     "@pandacss/generator": "^0.53.2",
-    "@pandacss/node": "^0.53.2",
     "@pandacss/shared": "^0.53.2",
     "@typescript-eslint/scope-manager": "^8.43.0",
     "@typescript-eslint/utils": "^8.21.0",
+    "micromatch": "^4.0.8",
     "synckit": "^0.9.0"
   },
   "description": "ESLint plugin for Panda CSS",
@@ -14,6 +14,7 @@
     "@pandacss/preset-base": "^1.3.0",
     "@pandacss/preset-panda": "^1.3.0",
     "@pandacss/types": "^1.3.0",
+    "@types/micromatch": "^4.0.10",
     "@typescript-eslint/rule-tester": "^8.43.0",
     "eslint": "^9.35.0",
     "multiline-ts": "^4.0.1",
