--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,9 +35,6 @@ jobs:
           fetch-depth: 0
       - uses: ./.github/actions/install
       - run: pnpm build
-      - id: changesets
-        uses: changesets/action@v1
-        with:
-          publish: pnpm release
+      - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
